--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
 
   commands:
   - lager connect --device stm32l4x --interface stlink --transport swd --speed 480 --gateway bold-badger --force
-  - lager testrun --serial-device /dev/ttyACM0 --hexfile third_party/nRF5_SDK_17.0.0_9d13099/components/softdevice/s140/hex/s140_nrf52_7.0.1_softdevice.hex --hexfile _build/test/test_suite_mpu9250_drv/blue42_test_mpu9250_drv.hex --test-runner unity --gateway 5
+  - lager testrun --serial-device /dev/ttyACM0 --hexfile Test/demo-b-l475e-iot01a1_test.hex --test-runner unity --gateway bold-badger
 
 trigger:
   branch:
