--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,8 @@ steps:
 - name: build
   image: lagerdata/devenv-cortexm-stm32
   commands:
-  - lager exec build
+  ln -s /drone/src /app
+  lager exec build
 
 - name: flash
   image: lagerdata/devenv-cortexm-stm32
