update drone yaml file and start executable image after flashing final image

--- a/.drone.yml
+++ b/.drone.yml
@@ -23,9 +23,10 @@ steps:
   image: lagerdata/devenv-cortexm-stm32
 
   commands:
-  - lager connect --device stm32l4x --interface stlink --transport swd --speed 480 --gateway bold-badger --force
-  - lager testrun --serial-device /dev/ttyACM0 --hexfile Test/demo-b-l475e-iot01a1_test.hex --test-runner unity --gateway bold-badger
-  - lager flash --hexfile demo-b-l475e-iot01a1.hex
+  - lager connect --device stm32l4x --interface stlink --transport swd --speed 480 --force
+  - lager testrun --serial-device /dev/ttyACM0 --hexfile Test/demo-b-l475e-iot01a1_test.hex --test-runner unity
+  - lager flash --hexfile Release/demo-b-l475e-iot01a1.hex
+  - lager run
 
 trigger:
   branch:
